BuildSystem: Rework the whole cmake build system
Now files are installed using the install() command instead of manually
copying files to their destinations. This allows automatic recompilation
of headers that did not work previously

--- a/BAN/CMakeLists.txt
+++ b/BAN/CMakeLists.txt
@@ -1,7 +1,3 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(BAN CXX)
-
 set(BAN_SOURCES
 	BAN/Assert.cpp
 	BAN/New.cpp
@@ -9,16 +5,8 @@ set(BAN_SOURCES
 	BAN/Time.cpp
 )
 
-add_custom_target(ban-headers
-	COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${BANAN_INCLUDE}/
-	DEPENDS sysroot
-)
-
 add_library(ban ${BAN_SOURCES})
-add_dependencies(ban headers libc-install)
+banan_link_library(ban libc)
 
-add_custom_target(ban-install
-	COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_BINARY_DIR}/libban.a ${BANAN_LIB}/
-	DEPENDS ban
-	BYPRODUCTS ${BANAN_LIB}/libban.a
-)
+banan_install_headers(ban)
+install(TARGETS ban)
