--- a/userspace/cat-mmap/CMakeLists.txt
+++ b/userspace/cat-mmap/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(cat-mmap CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(cat-mmap ${SOURCES})
-target_compile_options(cat-mmap PUBLIC -O2 -g)
-target_link_libraries(cat-mmap PUBLIC libc)
+banan_link_library(cat-mmap libc)
 
-add_custom_target(cat-mmap-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/cat-mmap ${BANAN_BIN}/
-	DEPENDS cat-mmap
-)
+install(TARGETS cat-mmap)
