--- a/userspace/cp/CMakeLists.txt
+++ b/userspace/cp/CMakeLists.txt
@@ -1,16 +1,9 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(cp CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(cp ${SOURCES})
-target_compile_options(cp PUBLIC -O2 -g)
-target_link_libraries(cp PUBLIC libc ban)
+banan_include_headers(cp ban)
+banan_link_library(cp libc)
 
-add_custom_target(cp-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/cp ${BANAN_BIN}/
-	DEPENDS cp
-)
+install(TARGETS cp)
