--- a/userspace/dd/CMakeLists.txt
+++ b/userspace/dd/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(dd CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(dd ${SOURCES})
-target_compile_options(dd PUBLIC -O2 -g)
-target_link_libraries(dd PUBLIC libc)
+banan_link_library(dd libc)
 
-add_custom_target(dd-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/dd ${BANAN_BIN}/
-	DEPENDS dd
-)
+install(TARGETS dd)
