--- a/userspace/image/CMakeLists.txt
+++ b/userspace/image/CMakeLists.txt
@@ -1,16 +1,10 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(image CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(image ${SOURCES})
-target_compile_options(image PUBLIC -O2 -g)
-target_link_libraries(image PUBLIC libc ban libimage)
+banan_include_headers(image ban)
+banan_link_library(image libc)
+banan_link_library(image libimage)
 
-add_custom_target(image-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/image ${BANAN_BIN}/
-	DEPENDS image
-)
+install(TARGETS image)
