--- a/userspace/init/CMakeLists.txt
+++ b/userspace/init/CMakeLists.txt
@@ -1,16 +1,9 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(init CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(init ${SOURCES})
-target_compile_options(init PUBLIC -O2 -g)
-target_link_libraries(init PUBLIC libc ban)
+banan_include_headers(init ban)
+banan_link_library(init libc)
 
-add_custom_target(init-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/init ${BANAN_BIN}/
-	DEPENDS init
-)
+install(TARGETS init)
