--- a/userspace/meminfo/CMakeLists.txt
+++ b/userspace/meminfo/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(meminfo CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(meminfo ${SOURCES})
-target_compile_options(meminfo PUBLIC -O2 -g)
-target_link_libraries(meminfo PUBLIC libc)
+banan_link_library(meminfo libc)
 
-add_custom_target(meminfo-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/meminfo ${BANAN_BIN}/
-	DEPENDS meminfo
-)
+install(TARGETS meminfo)
