--- a/userspace/nslookup/CMakeLists.txt
+++ b/userspace/nslookup/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(nslookup CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(nslookup ${SOURCES})
-target_compile_options(nslookup PUBLIC -O2 -g)
-target_link_libraries(nslookup PUBLIC libc)
+banan_link_library(nslookup libc)
 
-add_custom_target(nslookup-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/nslookup ${BANAN_BIN}/
-	DEPENDS nslookup
-)
+install(TARGETS nslookup)
