--- a/userspace/sleep/CMakeLists.txt
+++ b/userspace/sleep/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(sleep CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(sleep ${SOURCES})
-target_compile_options(sleep PUBLIC -O2 -g)
-target_link_libraries(sleep PUBLIC libc)
+banan_link_library(sleep libc)
 
-add_custom_target(sleep-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/sleep ${BANAN_BIN}/
-	DEPENDS sleep
-)
+install(TARGETS sleep)
