--- a/userspace/snake/CMakeLists.txt
+++ b/userspace/snake/CMakeLists.txt
@@ -1,16 +1,9 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(snake CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(snake ${SOURCES})
-target_compile_options(snake PUBLIC -O2 -g)
-target_link_libraries(snake PUBLIC libc)
+banan_include_headers(snake ban)
+banan_link_library(snake libc)
 
-add_custom_target(snake-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/snake ${BANAN_BIN}/
-	DEPENDS snake
-)
+install(TARGETS snake)
