--- a/userspace/test-sort/CMakeLists.txt
+++ b/userspace/test-sort/CMakeLists.txt
@@ -1,16 +1,9 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(test-sort CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(test-sort ${SOURCES})
-target_compile_options(test-sort PUBLIC -O2 -g)
-target_link_libraries(test-sort PUBLIC libc)
+banan_include_headers(test-sort ban)
+banan_link_library(test-sort libc)
 
-add_custom_target(test-sort-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/test-sort ${BANAN_BIN}/
-	DEPENDS test-sort
-)
+install(TARGETS test-sort)
