--- a/userspace/yes/CMakeLists.txt
+++ b/userspace/yes/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(yes CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(yes ${SOURCES})
-target_compile_options(yes PUBLIC -O2 -g)
-target_link_libraries(yes PUBLIC libc)
+banan_link_library(yes libc)
 
-add_custom_target(yes-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/yes ${BANAN_BIN}/
-	DEPENDS yes
-)
+install(TARGETS yes)
