--- a/userspace/libraries/LibGUI/CMakeLists.txt
+++ b/userspace/libraries/LibGUI/CMakeLists.txt
@@ -1,24 +1,14 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(libgui CXX)
-
 set(LIBGUI_SOURCES
 	Window.cpp
 )
 
-add_custom_target(libgui-headers
-	COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${BANAN_INCLUDE}/
-	DEPENDS sysroot
-)
-
 add_library(libgui ${LIBGUI_SOURCES})
-add_dependencies(libgui headers libc-install)
-target_link_libraries(libgui PUBLIC libc libfont)
+banan_include_headers(libgui ban)
+banan_include_headers(libgui libfont)
+banan_include_headers(libgui libinput)
+banan_link_library(libgui libc)
 
-add_custom_target(libgui-install
-	COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_BINARY_DIR}/libgui.a ${BANAN_LIB}/
-	DEPENDS libgui
-	BYPRODUCTS ${BANAN_LIB}/libgui.a
-)
+banan_install_headers(libgui)
+install(TARGETS libgui)
 
 set(CMAKE_STATIC_LIBRARY_PREFIX "")
