--- a/userspace/poweroff/CMakeLists.txt
+++ b/userspace/poweroff/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(poweroff CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(poweroff ${SOURCES})
-target_compile_options(poweroff PUBLIC -O2 -g)
-target_link_libraries(poweroff PUBLIC libc)
+banan_link_library(poweroff libc)
 
-add_custom_target(poweroff-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/poweroff ${BANAN_BIN}/
-	DEPENDS poweroff
-)
+install(TARGETS poweroff)
