--- a/userspace/test-globals/CMakeLists.txt
+++ b/userspace/test-globals/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(test-globals CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(test-globals ${SOURCES})
-target_compile_options(test-globals PUBLIC -O2 -g)
-target_link_libraries(test-globals PUBLIC libc)
+banan_link_library(test-globals libc)
 
-add_custom_target(test-globals-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/test-globals ${BANAN_BIN}/
-	DEPENDS test-globals
-)
+install(TARGETS test-globals)
