--- a/userspace/test-popen/CMakeLists.txt
+++ b/userspace/test-popen/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(test-popen CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(test-popen ${SOURCES})
-target_compile_options(test-popen PUBLIC -O2 -g)
-target_link_libraries(test-popen PUBLIC libc)
+banan_link_library(test-popen libc)
 
-add_custom_target(test-popen-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/test-popen ${BANAN_BIN}/
-	DEPENDS test-popen
-)
+install(TARGETS test-popen)
