--- a/userspace/test-tcp/CMakeLists.txt
+++ b/userspace/test-tcp/CMakeLists.txt
@@ -1,16 +1,8 @@
-cmake_minimum_required(VERSION 3.26)
-
-project(test-tcp CXX)
-
 set(SOURCES
 	main.cpp
 )
 
 add_executable(test-tcp ${SOURCES})
-target_compile_options(test-tcp PUBLIC -O2 -g)
-target_link_libraries(test-tcp PUBLIC libc)
+banan_link_library(test-tcp libc)
 
-add_custom_target(test-tcp-install
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/test-tcp ${BANAN_BIN}/
-	DEPENDS test-tcp
-)
+install(TARGETS test-tcp)
